# okam

./: .claudecode.json  .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Projeto_okam.md  QUICKSTART.md  README.md  pyproject.toml
.agents/rules/: governance-standards.md
.agents/skills/agentic-testing-companion/: SKILL.md
.agents/skills/checklists/: SKILL.md
.agents/skills/context-loop-manager/: SKILL.md
.agents/skills/deep-metadata-analysis/: SKILL.md
.agents/skills/guided-tour-creator/: SKILL.md
.agents/skills/knowledge-wiki/: SKILL.md
.agents/skills/memory-maintenance/: SKILL.md
.agents/skills/secret-leak-audit/: SKILL.md
.agents/skills/socratic-brainstorming/: SKILL.md
.agents/skills/surgical-code-editor/: SKILL.md
.agents/workflows/: deep-metadata-pipeline.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml  validate-okf.yml
docs/concepts/: deep-metadata.md  git-hooks.md  guided-tours.md  llm-wiki.md  okf-format.md
docs/diagrams/: architecture.mmd
hooks/: commit-msg  pre-commit  pre-push
knowledge/scripts/: okf_manager.py
knowledge/wiki/: architecture.md  getting-started.md  index.md  multi-agent-bridge.md
landing/: index.html  script.js  style.css
src/okam/: cli.py  doctor.py  hooks.py  manager.py  skill_creator.py
templates/: project-note.md  skill-template.md  tour-template.md
tests/: test_okam.py
