[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okam"
version = "0.2.0"
description = "Framework de governança de IA, memória persistente e gestão de conhecimento"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Juliano Ceconi"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
okam = "okam.cli:main"

[tool.hatch.build.targets.wheel.force-include]
"hooks" = "okam/hooks"

