[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okam"
version = "0.6.0"
description = "Framework de governança de IA, memória persistente e gestão de conhecimento"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Juliano Ceconi"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
okam = "okam.cli:main"

[tool.hatch.build.targets.wheel.force-include]
# Alvo distinto de okam/hooks.py para evitar colisão módulo x pacote no wheel.
"hooks" = "okam/_hook_scripts"
".agents/skills" = "okam/skills"
".agents/rules" = "okam/rules"

